@@ -1,5 +1,5 @@
-## Copyright (C) 2003-2012 Free Software Foundation, Inc.
-## Written by Keisuke Nishida, Roger While
+## Copyright (C) 2003-2012, 2016 Free Software Foundation, Inc.
+## Written by Keisuke Nishida, Roger While, Edward Hart, Simon Sobisch
 ##
 ## This file is part of GnuCOBOL.
 ##
@@ -971,5 +971,49 @@ AT_DATA([prog.cob], [
 AT_CHECK([$COMPILE_ONLY prog.cob], [1], [],
 [prog.cob: 7: Error: Cannot have S in PICTURE string and BLANK WHEN ZERO
 prog.cob: 8: Error: Cannot have * in PICTURE string and BLANK WHEN ZERO
+])
+AT_CLEANUP
+
+
+AT_SETUP([Alphabet definition])
+AT_KEYWORDS([definition])
+
+AT_DATA([prog.cob], [
+       IDENTIFICATION DIVISION.
+       PROGRAM-ID. prog.
+       ENVIRONMENT DIVISION.
+       CONFIGURATION SECTION.
+       SOURCE-COMPUTER. GNU-LINUX.
+       OBJECT-COMPUTER. GC-MACHINE,
+                        PROGRAM COLLATING SEQUENCE IS TESTME.
+       SPECIAL-NAMES.
+           ALPHABET TESTME IS
+                    'A' THROUGH 'Z', x'00' thru x'05';
+                    x'41' ALSO x'42', ALSO x'00'.
+           ALPHABET FINE IS
+                    'A' also 'B' also 'C' also 'd' also 'e' ALSO 'f',
+                    'g' also 'G', '1' thru '9'.
+])
+
+AT_DATA([prog2.cob], [
+       IDENTIFICATION DIVISION.
+       PROGRAM-ID. prog2.
+       ENVIRONMENT DIVISION.
+       CONFIGURATION SECTION.
+       SOURCE-COMPUTER. GNU-LINUX.
+       OBJECT-COMPUTER. GC-MACHINE,
+                        PROGRAM COLLATING SEQUENCE IS TESTNO.
+       SPECIAL-NAMES.
+           ALPHABET FINE IS
+                    'A' also 'B' also 'C' also 'd' also 'e' ALSO 'f',
+                    'g' also 'G', '1' thru '9'.
+])
+
+AT_CHECK([$COMPILE_ONLY prog.cob], [1], [],
+[prog.cob: 10: Error: Duplicate character values in alphabet 'TESTME': x'00', A, B
+])
+AT_CHECK([$COMPILE_ONLY prog2.cob], [1], [],
+[prog2.cob: 8: Error: 'TESTNO' is not defined
+prog2.cob: 8: Error: 'TESTNO' is not an alphabet name
 ])
 AT_CLEANUP
